--- a/css/index.css
+++ b/css/index.css
@@ -63,3 +63,41 @@ section > figure {
 #section4 > figure {
     background: url("../img/intro/free.svg");
 }
+
+#fvpp-blackout {
+  display: none;
+  z-index: 499;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: 0.5;
+}
+
+#welcome-message {
+  display: none;
+  z-index: 500;
+  position: fixed;
+  width: 70%;
+  left: 15%;
+  top: 15%;
+  padding: 20px 2%;
+  font-family: Calibri, Arial, sans-serif;
+  background: #FFF;
+}
+
+#fvpp-close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  cursor: pointer;
+}
+
+#fvpp-dialog h2 {
+  font-size: 2em;
+  margin: 0;
+}
+
+#fvpp-dialog p { margin: 0; }
